--- a/src/main/resources/templates/pesquisa/listaResposta.html
+++ b/src/main/resources/templates/pesquisa/listaResposta.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Favicon -->
+  
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -34,7 +34,7 @@
     />
     <link rel="stylesheet" href="../../css/sections.css" />
     <link rel="stylesheet" href="../../css/dpw.css" />
-    <!-- CSS only -->
+   
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -46,14 +46,12 @@
   </head>
   <body>
     <h1>Lista de Respostas</h1>
-    <button id="exb" type="button">Exibir</button>
-
-      <section id="stc" class="slc">
+      <section  class="slc">
         <h2>Clique no numero da resposta para exibir</h2>
         
-        <details th:each="li:${pesq.listaResposta}" open>
+        <details th:each="li:${pesq.listaResposta}" id="minhaDiv" open>
           <summary th:text="${li.id}"></summary>
-          <div id="minhaDiv">
+          <div id="">
           <table id="customers" th:each="it:${li.listaItem}">
             <thead>
               <th>Pergunta</th>
@@ -74,9 +72,6 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="../../js/liresp.js"></script>
     <script src="../../js/focus.js"></script>
-    <!--
-      <script src="../../js/selects/select-resposta.js"></script>
-     -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
