--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -1,53 +1,73 @@
-<html>
-  <head>
-    <title>Formulário</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <!-- Favicon -->
-        <link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
-    <link rel="stylesheet" href="../../css/login/login.css" />
+<html xmlns:th="http://thymeleaf.org">
+<head>
+<title>Formulário</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<link rel="stylesheet" href="../css/index_estilo.css">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+	rel="stylesheet">
+</head>
+<body>
 
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>  
-  </body>
-    <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
+	<nav>
+		<div class="nav-wrapper">
+			<img src="imagens/logo_senai.png" alt="Logo do SENAI">
+			<ul class="right hide-on-med-and-down">
+				<li><a class="waves-effect waves-light btn"><b>Eventos</b></a></li>
+			</ul>
+		</div>
+	</nav>
 
-  </head>
-  <body>
-    
-    <section class="login" id="fundo">
-      <div class="head">
-        <img class="img" src="../../img/kaozgreat.png" /> 
-      </div>
+	<div class="background-image">
+		<div>
+			<form class="signup-form" action="login" method="post">
+				<h3>Login</h3>
+				<div class="informacoes">
+					<input type="hidden" name="id"> <i class="material-icons">person</i><input
+						type="text" class="input" name="nif" id="nif"
+						placeholder="Digite seu NIF" required> <i
+						class="material-icons">lock_outline</i> <input type="password"
+						class="input" name="senha" id="senha" autocomplete="off"
+						placeholder="Digite sua senha" required> <input
+						type="submit" class="button" value="Login">
+						
+				</div>
+				
+				<div th:replace="fragments/mensagem" ></div>
+				<br> <br>
+			</form>
+		</div>
+	</div>
 
-      <p class="msg">Bem vindo de volta</p>
+	<footer class="page-footer">
+		<div class="container">
+			<div class="row">
+				<p class="grey-text text-lighten-4">
+					Escola Senai "Ricardo Lerner"<br> Rua Direita,955 - Vila Santo
+					Antonio - Cotia/SP - CEP 06708-280<br> Telefone: (11)
+					4628-1600 |E-mail:atendimento138@sp.senai.br
+				</p>
+				<br> <a href="https://www.facebook.com/senainacional/"
+					target="_blank"><img src="imagens/icon_facebook.png"
+					alt="Perfil do SENAI no Facebook"></a> <a
+					href="https://twitter.com/senainacional?lang=en" target="_blank"><img
+					src="imagens/icon_twitter.png" alt="Perfil do SENAI no Twitter"></a>
+			</div>
+		</div>
+		<hr style="height: 2px; background-color: white;">
+		<div class="footer-copyright" style="background-color: #F63D3D">
+			<div class="container">
+				<b>Copyright 2022 © Todos os direitos reservados.<br> O
+					conteúdo do site não pode ser editado, copiado ou distribuído sem
+					expressa autorização do SENAI-SP.
+				</b>
+			</div>
+		</div>
+	</footer>
 
-      <div class="form">
-        <form>
-          <input
-            type="text"
-            placeholder="NIF"
-            class="text"
-            id="login"
-            required
-          /><br />
-          <input
-            type="password"
-            placeholder="••••••••••••••"
-            class="password"
-            id="senha"
-          /><br />
-
-          <button class="btn-login"> Logar </button>
-
-
-           
-        </form>
-        
-      </div>
-    </section>
-    
-    <script src="../../js/login/login.js"></script>
-
-    </html>
+</body>
+</html>
