--- a/src/main/resources/templates/pergunta/cadPergunta.html
+++ b/src/main/resources/templates/pergunta/cadPergunta.html
@@ -2,27 +2,39 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../../css/pesquisa/pesquisa.css">
-	<link rel="stylesheet" href="../../css/cads.css">
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" href="../../css/pesquisa/pesquisa.css" />
+
+	<!-- CSS only -->
+
+	<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+			crossorigin="anonymous" />
+	<link
+			href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/css/select2.min.css"
+			rel="stylesheet" />
 	<!-- JQuery -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-		<link
-		href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/css/select2.min.css"
-		rel="stylesheet"
-	  />
-	  <!-- JQuery -->
-	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-   
-	  <link
-		href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/css/select2.min.css"
-		rel="stylesheet"
-	  />
-  
-	  <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/js/select2.min.js"></script>
+	<script
+			src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+	<link
+			href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/css/select2.min.css"
+			rel="stylesheet" />
+
+	<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/js/select2.min.js"></script>
+
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+		  rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+		  crossorigin="anonymous">
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 	<title>Cadastro de Pergunta</title>
 </head>
 
@@ -45,6 +57,11 @@
 		<h2 class="titleh2">Cadastro de Pergunta</h2>
 
 		<form method="post" style="border:2" action="novaPergunta">
+
+			<div class="alert alert-success collapse" role="alert" id="myAlert">
+				<button class="btn-close" data-bs-dismiss="alert"></button>
+				<h4 class="alert-heading">Pergunta cadastrada com sucesso!</h4>
+			</div>
 
 			<input type="hidden" name="id" th:value="${p?.id}"></input>
 			<p>
@@ -85,7 +102,21 @@
 
 	</div>
 
+	<script type="text/javascript">
+$(document).ready(function () {
+	var idPerg = [[${idPerg}]];
+	if(idPerg){
+		$('#myAlert').show('fade');
+	}
+});
+</script>
 
+	<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+			crossorigin="anonymous">
+
+	</script>
 	
 	<script src="../../js/selects/select.js"></script>
 	<!--Bootstrap-->
@@ -94,7 +125,6 @@
 		crossorigin="anonymous"></script>
 		<link href="path/to/select2.min.css" rel="stylesheet"/>
 <script src="path/to/select2.min.js"></script>
-
 </body>
 
 <style>
