--- a/src/main/resources/static/css/sections.css
+++ b/src/main/resources/static/css/sections.css
@@ -20,10 +20,10 @@ body {
 }
 
 .stquest{
-  width: 39%;
+  width: 25%;
 }
 .thquest{
-  width: 39%;
+  width: 25%;
 }
 
 section {
@@ -35,7 +35,7 @@ section {
 summary {
   display: block;
   cursor: pointer;
-  width: 200%;
+  width: 180%;
   font-family: "Space Mono", monospace;
   font-size: 19px;
   transition: 0.3s;
@@ -48,10 +48,15 @@ details > div {
   flex-wrap: wrap;
   overflow: auto;
   height: 100%;
-  width: 200%;
+  width: 180%;
   user-select: none;
   font-family: "Karla", sans-serif;
   line-height: 1.5;
+}
+.ipt-cont{
+  margin: 38px 450px;
+  width: 337px!important;
+  text-align: center;
 }
 
 details[open] > summary {
@@ -65,29 +70,9 @@ td{
 }
 
 @media (min-width: 768px) {
-  details[open] > div > p {
-    opacity: 0;
-    animation-name: showContent;
-    animation-duration: 0.6s;
-    animation-delay: 0.2s;
-    animation-fill-mode: forwards;
-    margin: 0;
-    padding-left: 20px;
-  }
-
   details[open] > div {
     animation-name: slideDown;
     animation-duration: 0.3s;
-    animation-fill-mode: forwards;
-  }
-
-  details[open] > div > img {
-    opacity: 0;
-    height: 00%;
-    margin: 0;
-    animation-name: showImage;
-    animation-duration: 0.3s;
-    animation-delay: 0.15s;
     animation-fill-mode: forwards;
   }
 }
