--- a/src/main/resources/templates/pesquisa/imprecao.html
+++ b/src/main/resources/templates/pesquisa/imprecao.html
@@ -23,7 +23,7 @@
             href="../img/favicon-16x16.png"
     />
 
-    <link rel="stylesheet" href="../../css/listas/lista.css"/>
+    <link rel="stylesheet" href="../../static/css/listas/lista.css"/>
     <link
             rel="stylesheet"
             href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
@@ -32,7 +32,7 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
-    <link rel="stylesheet" href="../../css/sections.css"/>
+    <link rel="stylesheet" href="../../static/css/sections.css"/>
 
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -47,20 +47,13 @@
 </head>
 <body>
         <h1 style="text-align:center">Lista de Respostas</h1>
-        <section class="slc"> 
-                <div class="mb-3">
-                <button class="btn btn-primary" onclick="pdf()">PDF</button> 
-                </div>    
-        <div class="input-group ipt-cont">
-                <div class="input-group-prepend">
-                  <span class="input-group-text" id="">Avaliações Respondidas</span>
-                </div>
-                <input th:value="${contagem}" disabled class="form-control">
-              </div>
+        <section class="slc">      
+        <label>Avaliações Respondidas</label>
+        <input th:value="${contagem}" disabled>
     <details th:each="li:${pesq.listaResposta}" id="minhaDiv" open>
 
         <summary th:text="${li.ip} +  '|' + ${li.nomeMaquina} + '|' + ${#dates.format(li.dataRealizacao, 'dd/MM/yyyy hh:mm:ss')}" id="maintable"></summary>
-        <div id="tabela">
+        <div>
             <table class="table table-striped">
                 <thead>
                 <tr>
@@ -87,7 +80,7 @@
                 <th>Nivel Importancia</th>
                 <th class="stquest">Comentário</th>
                 <th th:if="${session.diretoriaLogado}">Solicita Justificativa</th>
-                <th></th>
+                
                 <th th:if="${session.docenciaLogado}">Justifica</th>
               
 
@@ -112,22 +105,19 @@
                 <td th:text="${it.comentario}"></td>
                 <td><a th:href="@{/itemResposta/solicitaJustificativa(id=${it.id})}" th:if="${session.diretoriaLogado}"
                   onclick="solicitaJust()" id="cor">Solicitar</a></td>
-                  
-                <td><a th:href="@{/itemResposta/justificativa(id=${it.id})}" th:if="${session.docenciaLogado}">Justificar</a></td>
+                <td><a th:href="@{/itemResposta/justificativa(id=${it.id})}" th:if="${session.docenciaLogado}">Justificar</a>
+                </td>
                 
 
 
                 </tbody>
             </table>
         </div>
-        
     </details>
-    
+  
 </section>
-
 </div>
-
-
+<button href="" >Imprimir</button>
 
 <script th:inline="javascript">
       //esse metodo troca a cor do background quando uma justificativa eh solicitada, porem acho que o css volta ao normal quando da refresh
@@ -144,16 +134,13 @@
 <!-- JavaScript Bundle with Popper -->
 <script src="../../js/ip.js"></script>
 <script src="../../js/pdf.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js" integrity="sha384-NaWTHo/8YCBYJ59830LTz/P4aQZK1sS0SneOgAvhsIl3zBu8r9RevNg5lHCHAuQ/" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js" integrity="sha512-BNaRQnYJYiPSqHHDb58B0yaPfCu+Wgds8Gp/gU33kqBtgNS4tSPHuGibyoeqMV/TJlSKda6FXzoEyYGjTe+vXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"
 ></script>
-<script>
-        function pdf(){
-        window.print()
-}
-</script>
 </body>
 </html>
