--- a/src/main/resources/templates/pesquisa/listaResposta.html
+++ b/src/main/resources/templates/pesquisa/listaResposta.html
@@ -41,24 +41,50 @@
             integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
             crossorigin="anonymous"
     />
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+            crossorigin="anonymous" />
+    <link
+            href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/css/select2.min.css"
+            rel="stylesheet" />
+    <!-- JQuery -->
+    <script
+            src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+    <link
+            href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/css/select2.min.css"
+            rel="stylesheet" />
+
+    <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/js/select2.min.js"></script>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+          crossorigin="anonymous">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+
 
     <title>Lista de Respostas</title>
 </head>
 <body>
   <nav class="navbar navbar-dark  fixed-top">
 		<div class="container-fluid">
-			
 			<div>
 				<img class="Logo_kaos "src="../../img/Logo_KAOS.png" alt="">
-			  </div>
-			  
+            </div>
+
 		  <p class="navbar-brand" style="color: white; font-size:xx-large;" >Lista de Resposta</p>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
 			<span class="navbar-toggler-icon"></span>Menu
 		  </button>
 
 		  <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
-			<div class="offcanvas-header">
+              <div class="offcanvas-header">
 			  <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</h5>
 			  <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 			</div>
@@ -103,6 +129,10 @@
 <h1 style="text-align:center">Lista de Respostas</h1>
 <h4>Avaliações computadas</h4>
 <input th:value="${contagem}" disabled>
+  <div class="alert alert-success collapse" style="top:50%; text-align:center;" role="alert" id="myAlert">
+      <button class="btn-close" data-bs-dismiss="alert"></button>
+      <h4 class="alert-heading">Solicitação de justificativa enviada com sucesso!</h4>
+  </div>
 <section class="slc">
     <h2></h2>
 
@@ -144,8 +174,7 @@
                 <td th:text="${it.comentario}"></td>
                 <td><a th:href="@{/itemResposta/justificativa(id=${it.id})}" th:if="${session.docenciaLogado}">Justificar</a>
                 </td>
-                <td><a th:href="@{/itemResposta/solicitaJustificativa(id=${it.id})}" th:if="${session.diretoriaLogado}"
-                       onclick="solicitaJust()" id="cor">Solicitar</a></td>
+                <td><a th:href="@{/itemResposta/solicitaJustificativa(id=${it.id})}" th:if="${session.diretoriaLogado}" id="solicita">Solicitar</a></td>
 
 
                 </tbody>
@@ -160,17 +189,24 @@
 
 <footer th:replace="fragments/padrao :: rodape"></footer>
 
-<script th:inline="javascript">
-      //esse metodo troca a cor do background quando uma justificativa eh solicitada, porem acho que o css volta ao normal quando da refresh
+<!--<script th:inline="javascript">-->
+<!--      //esse metodo troca a cor do background quando uma justificativa eh solicitada, porem acho que o css volta ao normal quando da refresh-->
 
-      function solicitaJust() {
-        const input = document.getElementById("cor");
-        input.style.background = "black";
-        alert("Justificativa solicitada com sucesso!!");
-}
+<!--      function solicitaJust() {-->
+<!--        const input = document.getElementById("cor");-->
+<!--        input.style.background = "black";-->
+<!--        alert("Justificativa solicitada com sucesso!!");-->
+<!--}-->
 
+<!--</script>-->
+  <script type="text/javascript">
+$(document).ready(function () {
+	var idVerifica = [[${idVerifica}]];
+	if(idVerifica){
+		$('#myAlert').show('fade');
+	}
+});
 </script>
-
 
 <!-- JavaScript Bundle with Popper -->
 <script src="../../js/liresp.js"></script>
