--- a/src/main/resources/templates/pesquisa/cadPesquisa.html
+++ b/src/main/resources/templates/pesquisa/cadPesquisa.html
@@ -59,8 +59,8 @@
 			<button class="btn-close" data-bs-dismiss="alert"></button>
 			<h4 class="alert-heading">Pesquisa cadastrada com sucesso!</h4>
 			<hr>
-			<h6 class="mb-0">O código é: </h6><h5 style="background-color: white; text-align: center;">[[${idpesq}]].</h5>
-			<h6 class="mb-0">Informe ao docente: </h6><h5 style="background-color: white; text-align: center;">[[${nomeDocente}]].</h5>
+			<h6 class="mb-0" style="text-align: center;">O código é: </h6><h6 style="background-color: white; text-align: center;">[[${idpesq}]].</h6>
+			<h6 class="mb-0" style="text-align: center;">Informe ao docente: </h6><h6 style="background-color: white; text-align: center;">[[${nomeDocente}]].</h6>
 <!--			<p class="mb-0">O código é: </p> <p style="background-color: white;"> [[${idpesq}]].</p><p> Informe ao docente: [[${nomeDocente}]]</p>-->
 		</div>
 		<h1 style="text-align:center">Nova Pesquisa</h1>
