--- a/src/main/resources/templates/justificativa/justificativaResposta.html
+++ b/src/main/resources/templates/justificativa/justificativaResposta.html
@@ -33,14 +33,30 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+            <link rel="stylesheet" href="../../css/pesquisa/pesquisa.css" />
 
 
     <title>Justificativa</title>
 </head>
 <body>
-<h1>JUSTIFICATIVA RESPOSTA</h1>
+    <div class="area">
+		<ul class="circles">
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+	</div>
 
-<div class="container">
+
+<div class="container main-div">
+<h4>JUSTIFICATIVA RESPOSTA</h4>
 <form method="post" style="border:2" action="novaJustiResp">
 
     <div class="alert alert-success collapse" role="alert" id="myAlert">
@@ -50,17 +66,19 @@
 
     <input type="hidden" name="id"/>
     <div class="mb3">
-        <label>Resposta</label>
-        <input type="text" th:name="resposta.id" th:value="${resposta?.id}" />
+        <input type="hidden" th:name="resposta.id" th:value="${resposta?.id}" />
     </div>
     <br>
 
     <div class="mb-3">
-        comentario geral <input type="text" th:value="${resposta?.comentarioGeral}" disabled>
+        <label>Comentario Geral</label>
+        <input type="text" th:value="${resposta?.comentarioGeral}" disabled>
     </div>
     <br>
-    <div class="mb-3">
-        justifique-se: <input type="text" name="texto">
+    <div class="mb-3 form-floating">
+        
+        <textarea class="form-control" placeholder="Justifique Aqui" id="floatingTextarea2" style="height: 100px" name="texto" maxlength="250"></textarea>
+        <label for="floatingTextarea2">Justifique</label>
     </div>
     <br>
     <div class="mb-3">
